added vhdl build outputs to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,38 @@
 config.mk
 src/Module.symvers
 
+# xhdl build
+vhdl/build/*.bgn
+vhdl/build/*.bit
+vhdl/build/*.bld
+vhdl/build/*.csv
+vhdl/build/*.drc
+vhdl/build/*.lso
+vhdl/build/*.lst
+vhdl/build/*.map
+vhdl/build/*.mrp
+vhdl/build/*.ncd
+vhdl/build/*.ngc
+vhdl/build/*.ngd
+vhdl/build/*.ngm
+vhdl/build/*.pad
+vhdl/build/*.par
+vhdl/build/*.pcf
+vhdl/build/*.prj
+vhdl/build/*.ptwx
+vhdl/build/*.scr
+vhdl/build/*.srp
+vhdl/build/*.twr
+vhdl/build/*.twx
+vhdl/build/*.txt
+vhdl/build/*.unroutes
+vhdl/build/usage_statistics_webtalk.html
+vhdl/build/webtalk.log
+vhdl/build/xlnx_auto_*/
+vhdl/build/*.xml
+vhdl/build/_xmsgs/
+vhdl/build/*.xpi
+vhdl/build/*.xrpt
+vhdl/build/xst/
+vhdl/build/*.xwbt
+
